--- a/PLPOE/src/main/webapp/module/module_gerenciador_ponto_eletronico/paginaGerenciamentoPontoEletronicoCadastro.html
+++ b/PLPOE/src/main/webapp/module/module_gerenciador_ponto_eletronico/paginaGerenciamentoPontoEletronicoCadastro.html
@@ -452,7 +452,7 @@
 			<div class="container-fluid">
 				<div class="row page-titles">
 					<div class="col-md-5 align-self-center">
-						<h4 class="text-themecolor"> {{moduleName}} </h4>
+						<h4 class="text-themecolor"> Registro de Ponto Eletrônico </h4>
 					</div>
 					<div class="col-md-7 align-self-center text-right">
 						<div class="d-flex justify-content-end align-items-center">
@@ -472,60 +472,83 @@
 							<form class="row row-space-10 m-b-10">
 								<div class="form-group col-md-6">
 									<label for="dataHoraPrimeiraEntrada" class="text-white">Entrada I <span class="text-danger">*</span> </label> 
-									<input id="dataHoraPrimeiraEntrada" name="dataHoraPrimeiraEntrada" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraPrimeiraEntrada" class="form-control text-center" />
+									<input id="dataHoraPrimeiraEntrada" name="dataHoraPrimeiraEntrada" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraPrimeiraEntrada" autofocus maxlength="5" class="form-control text-center" />
 								</div>
 								<div class="form-group col-md-6">
 									<label for="dataHoraPrimeiraSaida" class="text-white">Saída I <span class="text-danger">*</span> </label> 
-									<input id="dataHoraPrimeiraSaida" name="dataHoraPrimeiraSaida" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraPrimeiraSaida" class="form-control text-center" />
+									<input id="dataHoraPrimeiraSaida" name="dataHoraPrimeiraSaida" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraPrimeiraSaida" maxlength="5" class="form-control text-center" />
 								</div>
 								<div class="form-group col-md-6">
 									<label for="dataHoraSegundaEntrada" class="text-white">Entrada II <span class="text-danger">*</span> </label> 
-									<input id="dataHoraSegundaEntrada" name="dataHoraSegundaEntrada" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraSegundaEntrada" class="form-control text-center" />
+									<input id="dataHoraSegundaEntrada" name="dataHoraSegundaEntrada" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraSegundaEntrada" maxlength="5" class="form-control text-center" />
 								</div>
 								<div class="form-group col-md-6">
 									<label for="dataHoraSegundaSaida" class="text-white">Saída II <span class="text-danger">*</span> </label> 
-									<input id="dataHoraSegundaSaida" name="dataHoraSegundaSaida" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraSegundaSaida" class="form-control text-center" />
+									<input id="dataHoraSegundaSaida" name="dataHoraSegundaSaida" type="text" placeholder="00H 00M" ng-model="gerenciadorPontoEletronicoModel.dataHoraSegundaSaida" maxlength="5" class="form-control text-center" />
 								</div>
 							</form>
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="card card-body">
-							<form>
-								<button type="submit" ng-click="save(gerenciadorPontoEletronicoModel)" class="btn btn-info col-lg-12">Registrar Ponto Eletrônico</button>
-							</form>
+							<div class="form-group col-md-12">
+								<div class="card-body">
+									<div class="row">
+										<div class="col-md-10">
+											<button ng-click="save(gerenciadorPontoEletronicoModel)"  ng-disabled="!gerenciadorPontoEletronicoModel.dataHoraPrimeiraEntrada" class="btn btn-info btn-block">Registrar Ponto Eletrônico</button>
+										</div>
+										<div class="col-md-2">
+											<button ng-click="clear()" class="btn btn-danger btn-block">Cancelar</button>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-				
-				<div class="row">
+
+				<div ng-if="gerenciadorPontoEletronicoList.length > 0" class="row">
 					<div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title">Registro de Ponto Eletrônico</h4>
-                                <div class="table-responsive">
-                                    <table class="table table-hover">
+                                <h4 class="card-title">Histórico de Registro Eletrônico</h4>
+								<div class="table-responsive">
+									<table class="table table-hover">
+										<div class="col-md-4 text-right">
+											<div class="card card-body">
+												<input type="text" id="search" ng-model="search" placeholder="Pesquisar" class="form-control" />
+											</div>
+										</div>
                                         <thead>
                                             <tr>
                                                 <th>Código</th>
+                                                <th>Data</th>
                                                 <th>Primeira Entrada</th>
                                                 <th>Primeira Saída</th>
                                                 <th>Segunda Entrada</th>
                                                 <th>Segunda Saída</th>
-                                                <th>Situação</th>
+                                                <th class="text-center">Ação</th>
                                             </tr>
                                         </thead>
-                                        <tbody ng-repeat="pontoEletronicoResult in $scope.gerenciadorPontoEletronicoList">
+                                        <tbody ng-repeat="pontoEletronicoResult in gerenciadorPontoEletronicoList | filter:search">
                                             <tr>
                                                 <td>{{pontoEletronicoResult.codigo}}</td>
+                                                <td>{{pontoEletronicoResult.dataHoraAtual}}</td>
                                                 <td>{{pontoEletronicoResult.dataHoraPrimeiraEntrada}}</td>
                                                 <td>{{pontoEletronicoResult.dataHoraPrimeiraSaida}}</td>
                                                 <td>{{pontoEletronicoResult.dataHoraSegundaEntrada}}</td>
                                                 <td>{{pontoEletronicoResult.dataHoraSegundaSaida}}</td>
-                                                <td><span class="label label-info">Registrado com Sucesso</span></td>
+                                                <td class="text-center">
+                                                	<div class="btn-group">
+					                                   <button type="button" ng-click="update(pontoEletronicoResult)" class="btn btn-info btn-circle"><i class="fa fa-edit"></i></button>
+					                                </div>
+                                                	<div class="btn-group">
+					                                   <button type="button" ng-click="remove(pontoEletronicoResult)" class="btn btn-danger btn-circle"><i class="fa fa-trash-alt"></i></button>
+					                                </div>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
